<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/editAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_name"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/editAppDeveloper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15px"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_type"
        android:textStyle="bold"/>
    <Spinner
        android:id="@+id/spinnerAppType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/app_type"
        android:layout_marginBottom="15px"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_category"
        android:textStyle="bold"/>
    <Spinner
        android:id="@+id/spinnerAppCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/app_category"
        android:layout_marginBottom="15px"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"/>
</LinearLayout>
