<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_release_date"
            android:textStyle="bold"/>
        <DatePicker
            android:id="@+id/datePickerRelease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15px"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_code"
            android:textStyle="bold"/>
        <CheckBox
            android:id="@+id/checkBoxOpenSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_open_source"
            android:layout_marginBottom="15px"/>

        <Button
            android:id="@+id/btnCreateNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" />
    </LinearLayout>
</ScrollView>
